Bug fixes in best score, loading gameboard visibility, etc.

--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,11 @@ button:active {
 img {
   height: 20px;
 }
+
+.visible {
+  visibility: visible;
+}
+
+.hidden {
+  visibility: hidden;
+}
