--- a/src/components/GameBoard.css
+++ b/src/components/GameBoard.css
@@ -1,11 +1,8 @@
 .gameboard {
   width: 80vw;
   margin: 1vw 10vw;
-  /* border: 4px solid #f0262a; */
-
-  /* background-color: #95d244; */
-
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 1vw;
+  min-height: 200px;
 }
